--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.544.0",
+    "lucide-react": "^0.545.0",
     "matter-js": "^0.20.0",
+    "motion": "^12.23.24",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
     "poly-decomp": "^0.3.0",
